2007-07-30, Version 4.0.6
	* sensors plugin: Fix the ignorelist functionality: Only the `type
	  instance' was used to match against the list, but the documentation
	  told otherwise. This release fixes the code, so it complies with the
	  documentation.

2007-07-05, Version 4.0.5
	* Portability: More fixes for OpenBSD have been included.

2007-06-24, Version 4.0.4
	* cpu plugin: Fixed the Solaris code.
	* dns plugin: Fixed a build issue for OpenBSD.
	* interface plugin: Fixed the Solaris code.
	* load plugin: Fixed the alternative `/proc' Linux code.
	* memory plugin: Fixed the Solaris code.
	* oconfig: Don't require `-lfl' anymore.

2007-06-19, Version 4.0.3
	* cpu plugin: Fix the Darwin / Mac OS X code.
	* ping plugin: Use the return value of `getpid', not its address.
	* csv, rrdtool plugin: Fixed a bug that prevented an buffer to be
	  initialized correctly.
	* configure: Added `--with-nan-emulation' to aid cross compilation.

2007-06-12, Version 4.0.2
	* hddtemp and ntpd plugin: Corrected the parsing of port numbers when
	  they're given in numerically form.

2007-06-07, Version 4.0.1
	* iptables plugin: A bug in the configuration routine has been fixed.
	  Setting a comment in the configfile will no longer cause a
	  segmentation fault.

2007-06-03, Version 4.0.0
	* collectd: The plugin-infrastructure has been changed to allow for
	  more types of plugins, namely `write' and `log' plugins.
	* collectd: The read-function has been changed to read many plugins in
	  parallel, using threads. Thus, plugins generally need to use
	  thread-safe functions from now on.
	* collectd: The '-t' command line options allows to perform syntax tests
	  of the configuration file and exit immediately.
	* csv plugin: The new `csv' plugin handles output to `comma separated
	  values'-files.
	* rrdtool plugin: The new `rrdtool' plugin handles output to
	  RRD-files. Data can be cached to combine multiple updates into one
	  write to increase IO-performance.